--- a/skameika/templates/occurrence/transactions.html
+++ b/skameika/templates/occurrence/transactions.html
@@ -1,20 +1,38 @@
 {% extends "base.html" %}
+{% load staticfiles %}
 
 {% block content %}
 
-{% for transaction in transactions %}
-  <div class="col-sm-12">
-    <div class="col-sm-2">{{ transaction.date }}</div>
-    <div class="col-sm-2">{{ transaction.title }}</div>
-    <div class="col-sm-2">{{ transaction.category }}</div>
-    <div class="col-sm-3">{{ transaction.description }}</div>
-  </div>
-{% endfor %}
+<h2>Current Transactions</h2>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Title</th>
+      <th>Amount</th>
+      <th>Category</th>
+      <th>Description</th>
+      <th>Receipt</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for transaction in transactions %}
+      <tr>
+        <td>{{ transaction.date }}</td>
+        <td>{{ transaction.title }}</td>
+        <td>{{ transaction.amount }}</td>
+        <td>{{ transaction.category }}</td>
+        <td>{{ transaction.description }}</td>
+        <td>{% if transaction.receipt %}<a href="{{ transaction.receipt.url }}">receipt</a>{% endif %}</td>
+      </tr>
+    {% endfor %}
+  </tbody>
+</table>
 
 <h2>New Transaction</h2>
 <form action="" method="POST" class="form">
   {% csrf_token %}
-  {{ form }}
+  {{ form.as_p }}
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
