add pagination by month for transactions view

--- a/skameika/templates/occurrence/transactions.html
+++ b/skameika/templates/occurrence/transactions.html
@@ -36,4 +36,15 @@
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
 
+<nav>
+  <ul class="pagination">
+    {% for month in months %}
+      <li class="{% if current_month == month %}active{% endif %}">
+        <a href="{% url "transactions" %}?month={{ month.name }}">
+          {{ month }}
+        </a>
+      </li>
+    {% endfor %}
+  </ul>
+</nav>
 {% endblock content %}
