transactions views expect a slug, not a name

--- a/skameika/templates/occurrence/transactions.html
+++ b/skameika/templates/occurrence/transactions.html
@@ -79,7 +79,7 @@
   <ul class="pagination">
     {% for month in months %}
       <li class="{% if current_month == month %}active{% endif %}">
-        <a href="{% url "transactions" %}?month={{ month.name }}">
+        <a href="{% url "transactions" %}?month={{ month.slug }}">
           {{ month }}
         </a>
       </li>
