--- a/skameika/templates/base.html
+++ b/skameika/templates/base.html
@@ -17,6 +17,13 @@
     <script src="{% static 'libs/modernizr.js' %}"></script>
 </head>
 <body>
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
     <div class="container">
         {% block content %}{% endblock %}
     </div>
